--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=gijoneventos
+
+# Base API endpoint
+api-endpoint=/api/v1
+
+# Perfil activo
+spring.profiles.active=h2
+
+# Docker Compose (desactivado por ahora)
+spring.docker.compose.enabled=false
+
+# Seguridad básica (comentada, se usará Spring Security más adelante)
+# spring.security.user.name=admin
+# spring.security.user.password=password
+
+# Inicialización de la base de datos
+spring.sql.init.mode=always
