--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=gijoneventos
 api-endpoint=/api/v1
 
 # Perfil activo
-spring.profiles.active=h2
+spring.profiles.active=mysql
 
 # Docker Compose (desactivado por ahora)
 spring.docker.compose.enabled=false
