--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,15 +1,17 @@
 # Base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/gijoneventos_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3307/gijoneventos_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=appuser
 spring.datasource.password=apppassword
 
 # JPA / Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update  # Usa 'update' para persistir datos; cambia a 'create-drop' solo para pruebas
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 
 # Inicialización de datos (ejecuta data.sql)
-spring.sql.init.mode=always
+spring.sql.init.mode=never
+# la primera vez se usa always para crear las tablas
+# spring.sql.init.mode=always
