fix bug Register

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.docker.compose.enabled=false
 # spring.security.user.password=password
 
 # Inicialización de la base de datos
-spring.sql.init.mode=always
+spring.sql.init.mode=never
