--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,9 +1,9 @@
 # Base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3307/gijoneventos_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://mysql-db:3306/gijoneventos_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# Usa variable de entorno o default a localhost
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3307/gijoneventos_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=appuser
-spring.datasource.password=apppassword
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:appuser}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:apppassword}
 
 # JPA / Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -12,7 +12,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 
-# Inicialización de datos (ejecuta data.sql)
+# Inicialización de datos
 spring.sql.init.mode=never
-# la primera vez se usa always para crear las tablas
-# spring.sql.init.mode=always
